--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.4",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
-    "axios": "^1.7.4"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
